--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div id="settings" style="display: none;">
-        <span>Specify Domains</span>
+        <span>Specify Domains (not working yet)</span>
         <input type="text" id="domains" value="localhost, 127.0.0.1">
         <br>
         <br>
