implements domain filtering

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </div>
 
     <div id="settings" style="display: none;">
-        <span>Specify Domains (not working yet)</span>
+        <span>Domain-Filters</span>
         <input type="text" id="domains" value="localhost, 127.0.0.1">
+        <a href="" id="info">info (i)</a>
         <br>
         <br>
         <button id="reset">Reset Time</button>
